--- a/css/styles.css
+++ b/css/styles.css
@@ -148,3 +148,9 @@ ul {
   font-size: 16px;
   line-height: 1.88;
 }
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
