--- a/css/styles.css
+++ b/css/styles.css
@@ -158,8 +158,16 @@ img {
 /* Раздел особенности */
 
 .heading-visible {
-  visibility: hidden;
-  line-height: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  /* visibility: hidden;
+  line-height: 0; */
 }
 
 /* Заголовки секций */
@@ -287,9 +295,6 @@ p {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-/* .section:last-child {
-  padding-bottom: 94px;
-} */
 
 /* Секция особенности */
 
@@ -297,14 +302,15 @@ p {
   display: flex;
   padding-top: 74px;
 }
+
 .specificities .item {
-  flex-basis: calc(100% / 4 - 30px);
+  flex-basis: calc(100% / 4);
 }
 .specificities .item:not(:first-child) {
   margin-left: 30px;
 }
 .section-specificities-text {
-  margin-top: 10px;
+  padding-top: 10px;
 }
 
 /* Секция Чем мы занимаемся */
@@ -313,7 +319,7 @@ p {
   padding-top: 50px;
 }
 .works .item {
-  flex-basis: calc(100% / 3 - 30px);
+  flex-basis: calc(100% / 3);
 }
 .works .item:not(:first-child) {
   margin-left: 30px;
@@ -330,7 +336,7 @@ p {
   margin-right: auto;
 }
 .team .team-card {
-  flex-basis: calc(100% / 4 - 30px);
+  flex-basis: calc(100% / 4);
 }
 .team .team-card:not(:first-child) {
   margin-left: 30px;
